--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,26 +2,85 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+
+}
+
+body {
+    background-image: linear-gradient(to bottom right, rgb(207, 207, 207), rgb(255, 255, 255));
+}
+
+header {
+    padding: 1% 3%;
+    background-image: linear-gradient(to bottom right, rgba(36, 39, 53, 0.945), rgba(23, 31, 68, 0.911));
+    width: 100%; 
+    border-bottom: rgb(167, 167, 167) solid 1px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    font-weight: lighter;
+}
+
+a {
+    text-decoration: none;
+    color:rgba(209, 209, 209, 0.842)
+}
+
+a:hover {
+    color:white;
+} 
+
+ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    color:rgba(209, 209, 209, 0.842);
 }
 
 main {
     display: flex;
     flex-direction: column;
     text-align: center;
+    margin: 10% 5%;
+    padding: 2%;
+    border: solid .5px rgba(0, 0, 0, 0.486);
+    border-radius: 5px;
+    background-image: linear-gradient(to bottom right, rgba(255, 255, 255, 0.945), rgba(255, 255, 255, 0.931));
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)
 }
 
-ul {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-}
 
 section {
     display: flex;
     flex-direction: column;
+    text-align: center;
 }
 
 button {
     width: max-content;
+    padding: 5px;
+    margin: 3px;
+    /* background-image: linear-gradient(to bottom right, rgb(163, 83, 46), rgb(82, 26, 26)); */
+    color: rgba(1, 37, 58, 0.787);
+}
+
+#start-button {
+    width: 100px;
+}
+
+h1 {
+    font-size: 2rem;
+}
+
+h2 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+}
+
+hr {
+    margin: 20px;
+}
+
+p {
+    margin: 20px;
 }
 
