--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@ body {
 
 header {
     padding: 1% 3%;
-    background-image: linear-gradient(to bottom right, rgba(36, 39, 53, 0.945), rgba(23, 31, 68, 0.911));
+    background-image: linear-gradient(to bottom right, rgba(50, 65, 97, 0.945), rgba(23, 31, 68, 0.911));
     width: 100%; 
     border-bottom: rgb(167, 167, 167) solid 1px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
@@ -52,15 +52,22 @@ main {
 section {
     display: flex;
     flex-direction: column;
-    text-align: center;
+    
 }
 
 button {
+    /* width: max-content; */
+    min-width: 100px;
+    max-width: max-content;
+    padding: 5px;
+    margin: 3px;
+    color: rgba(1, 37, 58, 0.787);
+}
+
+input {
     width: max-content;
     padding: 5px;
     margin: 3px;
-    /* background-image: linear-gradient(to bottom right, rgb(163, 83, 46), rgb(82, 26, 26)); */
-    color: rgba(1, 37, 58, 0.787);
 }
 
 #start-button {
@@ -77,10 +84,45 @@ h2 {
 }
 
 hr {
-    margin: 20px;
+    margin-top: 30px;
 }
 
 p {
     margin: 20px;
 }
+
+#correct {
+    color:green;
+    font-style: italic;
+    margin: 20px;
+}
+
+#wrong {
+    color: red;
+    font-style: italic;
+    margin: 20px;
+}
+
+#high-scores-table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-items: center;
+}
+
+table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 50%;
+    margin: 30px;
+}
+  
+table td, table th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+table tr:nth-child(even){background-color: #f2f2f2;}
+
+table tr:hover {background-color: #ddd;}
 
